Added the box icon link

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="style.css">
 
         <!-- ===== BOX ICONS ===== -->
-        
+        <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
 
         <title>Shoe Store</title>
     </head>
