--- a/index.html
+++ b/index.html
@@ -15,6 +15,32 @@
     <body>
 
         <!--===== HEADER =====-->
+        <header class="l-header" id="header">
+            <nav class="nav bd-grid">
+                <div class="nav_toggle" id="nav-toggle">
+                    <i class='bx bx-menu-alt-left' ></i>
+                </div>
+
+                <a href="#" class="nav_logo">Shoe</a>
+
+                <div class="nav_menu" id="nav-menu">
+                    <ul class="nav_list">
+                        <li class="nav_item"><a href="#home" class="nav_link active">Home</a></li>
+                        <li class="nav_item"><a href="#featured" class="nav_link">Featured</a></li>
+                        <li class="nav_item"><a href="#women" class="nav_link">Women</a></li>
+                        <li class="nav_item"><a href="#new" class="nav_link">New</a></li>
+                        <li class="nav_item"><a href="./shop.html" class="nav_link">Shop</a></li>
+                        <li class="nav_item"><a href="./login.html" class="nav_link">Login</a></li>
+                    </ul>
+                </div>
+
+
+                <div class="nav_shop">
+                    <i class='bx bx-shopping-bag'></i>
+                </div>
+
+            </nav>
+        </header>
         
 
         <main class="l-main">
