Added the Home page in Index

--- a/index.html
+++ b/index.html
@@ -45,7 +45,21 @@
 
         <main class="l-main">
             <!--===== HOME =====-->
-            
+            <section class="home" id="home">
+                <div class="home_container bd-grid">
+                    <div class="home_sneaker">
+                        <div class="home_shape"></div>
+                        <img src="img/imghome.png" alt="" class="home_img">
+                    </div>
+
+                <div class="home_data">
+                    <span class="home_new">New in</span>
+                    <h1 class="home_title">YEEZY BOOST <br> SPLY - 350</h1>
+                    <p class="home_description">Explore the new collection of sneakers</p>
+                    <a href="#" class="button">Explore now</a>
+                </div>
+            </section>
+
 
             <!--===== FEATURED =====-->
             
