Added the Collection section

--- a/index.html
+++ b/index.html
@@ -94,7 +94,29 @@
             </section>
 
             <!--===== COLLECTION =====-->
-            
+            <section class="collection section">
+                <div class="collection_container bd-grid">
+                    <div class="collection_card">
+                        <div class="collection_data">
+                            <h3 class="collection_name">Nike</h3>
+                            <p class="collection_description">New Collection 2021</p>
+                            <a href="#" class="button-light">Buy Now<i class='bx bx-right-arrow-alt button-icon'></i></a>
+                        </div>
+
+                        <img src="img/collection1.png" alt="" class="collection_img">
+                    </div>
+
+                    <div class="collection_card">
+                        <div class="collection_data">
+                            <h3 class="collection_name">Adidas</h3>
+                            <p class="collection_description">New Collection 2021</p>
+                            <a href="#" class="button-light">Buy Now<i class='bx bx-right-arrow-alt button-icon'></i></a>
+                        </div>
+
+                        <img src="img/collection2.png" alt="" class="collection_img">
+                    </div>
+                </div>
+            </section>
 
             <!--===== WOMEN SNEAKERS =====-->
             
