Added the Women Sneaker section

--- a/index.html
+++ b/index.html
@@ -119,6 +119,40 @@
             </section>
 
             <!--===== WOMEN SNEAKERS =====-->
+
+            <section class="women section" id="women">
+                <h2 class="section-title">WOMEN SNEAKERS</h2>
+
+                <div class="women_container bd-grid">
+                    <article class="sneaker">
+                        <img src="img/women1new.png" alt="" class="sneaker_img">
+                        <span class="sneaker_name">Nike Air 270</span>
+                        <span class="sneaker_preci">$269.99</span>
+                        <a href="" class="button-light">Add to Cart<i class='bx bx-right-arrow-alt button-icon'></i></a>
+                    </article>
+
+                    <article class="sneaker">
+                        <img src="img/newwomen2.png" alt="" class="sneaker_img">
+                        <span class="sneaker_name">Nike Air 270</span>
+                        <span class="sneaker_preci">$259.99</span>
+                        <a href="" class="button-light">Add to Cart<i class='bx bx-right-arrow-alt button-icon'></i></a>
+                    </article>
+
+                    <article class="sneaker">
+                        <img src="img/newwomen3.png" alt="" class="sneaker_img">
+                        <span class="sneaker_name">Nike Air 97</span>
+                        <span class="sneaker_preci">$169.99</span>
+                        <a href="" class="button-light">Add to Cart<i class='bx bx-right-arrow-alt button-icon'></i></a>
+                    </article>
+
+                    <article class="sneaker">
+                        <img src="img/newwomen4.png" alt="" class="sneaker_img">
+                        <span class="sneaker_name">Nike Air 97</span>
+                        <span class="sneaker_preci">$169.99</span>
+                        <a href="" class="button-light">Add to Cart<i class='bx bx-right-arrow-alt button-icon'></i></a>
+                    </article>
+                </div>
+                </section>
             
 
             <!--===== OFFER =====-->
