Added the offer section

--- a/index.html
+++ b/index.html
@@ -155,7 +155,17 @@
                 </section>
             
 
-            <!--===== OFFER =====-->
+            <section class="offer section">
+                <div class="offer_container bd-grid">
+                    <div class="offer_data">
+                        <h3 class="offer_title">50% OFF</h3>
+                        <p class="offer_description">In Adidas Superstar Sneakers</p>
+                        <a href="#" class="button">Shop Now</a>
+                    </div>
+
+                    <img src="img/offert.png" alt="" class="offer_img">
+                </div>
+            </section>>
             
 
             <!--===== NEW COLLECTION =====-->
