Added the Footer seciton

--- a/index.html
+++ b/index.html
@@ -220,6 +220,43 @@
 
         <!--===== FOOTER =====-->
         
+        <footer class="fotter section">
+            <div class="fotter_container bd-grid">
+                <div class="fotter_box">
+                    <h3 class="footer_title">Shoe</h3>
+                    <p class="footer_description">New collection of shoes 2021</p>
+                </div>
+
+                <div class="footer_box">
+                    <h3 class="footer_title">EXPLORE</h3>
+                    <ul>
+                        <li><a href="#home" class="footer_link">Home</a></li>
+                        <li><a href="#featured" class="footer_link">Featured</a></li>
+                        <li><a href="#women" class="footer_link">Women</a></li>
+                        <li><a href="#new" class="footer_link">New</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer_box">
+                    <h3 class="footer_title">SUPPORT</h3>
+                    <ul>
+                        <li><a href="#" class="footer_link">Product Help</a></li>
+                        <li><a href="#" class="footer_link">Customer Care</a></li>
+                        <li><a href="#" class="footer_link">Athorized service</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer_box">
+                    <a href="#" class="footer_social"><i class='bx bxl-facebook' ></i></a>
+                    <a href="#" class="footer_social"><i class='bx bxl-instagram' ></i></a>
+                    <a href="#" class="footer_social"><i class='bx bxl-twitter' ></i></a>
+                    <a href="#" class="footer_social"><i class='bx bxl-google' ></i></a>
+                </div>
+
+                <p class="footer_copy">&#169; 2021 Inxhinjeri Projekt. All rights reserved</p>
+            </div>
+        </footer>
+        
 
         <!--===== MAIN JS =====-->
         <script src="main.js"></script>
