Added the Newsletter section

--- a/index.html
+++ b/index.html
@@ -215,6 +215,20 @@
             
 
             <!--===== NEWSLETTER =====-->
+            <section class="newsletter section">
+                <div class="newsletter_container bd-grid">
+                    <div>
+                        <h3 class="newsletter_title">Subscribe and get <br> 10% OFF </h3>
+                        <p class="newsletter_description">Get 10% discount for all products</p>
+                    </div>
+
+                    <form action="" class="newsletter_subscribe">
+                        <input type="text" placeholder="@email.com" class="newsletter_input">
+                        <a href="#" class="button">Subscribe</a>
+                    </form>
+                </div>
+            </section>
+
             
         </main>
 
